Some minor optimizations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,8 +3,8 @@ spring.application.name=detector
 # Detector properties
 detector.token=Read README.md
 
-#default-base-url=http://ec2-13-60-224-145.eu-north-1.compute.amazonaws.com:8080
-default-base-url=http://localhost:8080
+default-base-url=https://digit.sandbox.bitw3b.eu
+
 # Enables Object Mapper autoconfiguration
 ee.bitweb.core.object-mapper.auto-configuration=true
 # Enables Retrofit autoconfiguration
