--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=detector
+spring.threads.virtual.enabled=true
 
 # Detector properties
 detector.token=Read README.md
@@ -21,3 +22,9 @@ persons.api.token=${detector.token}
 #Devices api properties
 devices.api.base-url=${default-base-url}
 devices.api.token=${detector.token}
+ee.bitweb.core.retrofit.logging.level=none
+ee.bitweb.core.retrofit.timeout.call=120000
+ee.bitweb.core.retrofit.timeout.connect=120000
+ee.bitweb.core.retrofit.timeout.read=120000
+ee.bitweb.core.retrofit.timeout.write=120000
+
