--- a/build.gradle
+++ b/build.gradle
@@ -36,10 +36,11 @@ dependencies {
     //implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     //implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
+    implementation 'org.springframework.boot:spring-boot-starter-web'
     // https://mvnrepository.com/artifact/com.fasterxml.jackson.datatype/jackson-datatype-jsr310
-    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "2.18.3"
+//    implementation group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: "2.18.3"
     // https://mvnrepository.com/artifact/org.springframework/spring-web
-    implementation 'org.springframework:spring-web'
+//    implementation 'org.springframework:spring-web'
     //implementation 'org.springframework.boot:spring-boot-starter-web'
     //implementation 'org.flywaydb:flyway-core'
     //implementation 'org.flywaydb:flyway-database-postgresql'
