--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=detector
 spring.threads.virtual.enabled=true
 
 # Detector properties
-detector.token=Read README.md
+detector.token=LwL1YLua4PZp4b009mWBzjG09PClXHCT
 
-default-base-url=https://digit.sandbox.bitw3b.eu
+default-base-url=http://localhost:8080
 
 # Enables Object Mapper autoconfiguration
 ee.bitweb.core.object-mapper.auto-configuration=true
@@ -27,4 +27,6 @@ ee.bitweb.core.retrofit.timeout.call=120000
 ee.bitweb.core.retrofit.timeout.connect=120000
 ee.bitweb.core.retrofit.timeout.read=120000
 ee.bitweb.core.retrofit.timeout.write=120000
+logging.level.org.mockserver=OFF
 
+server.port=8081
